; ModuleID = '/home/carl/AnghaBench/linux/arch/parisc/lib/extr_delay.c___cr16_delay.c'
source_filename = "/home/carl/AnghaBench/linux/arch/parisc/lib/extr_delay.c___cr16_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @__cr16_delay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__cr16_delay(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %7 = load i64, i64* %2, align 8
  store i64 %7, i64* %5, align 8
  %8 = call i32 (...) @preempt_disable()
  %9 = call i32 (...) @smp_processor_id()
  store i32 %9, i32* %6, align 4
  %10 = call i64 @mfctl(i32 16)
  store i64 %10, i64* %3, align 8
  br label %11

11:                                               ; preds = %37, %1
  %12 = call i64 @mfctl(i32 16)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* %3, align 8
  %15 = sub nsw i64 %13, %14
  %16 = load i64, i64* %5, align 8
  %17 = icmp sge i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  br label %38

19:                                               ; preds = %11
  %20 = call i32 (...) @preempt_enable()
  call void asm sideeffect "\09nop\0A", "~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  %21 = call i32 (...) @barrier()
  %22 = call i32 (...) @preempt_disable()
  %23 = load i32, i32* %6, align 4
  %24 = call i32 (...) @smp_processor_id()
  %25 = icmp ne i32 %23, %24
  %26 = zext i1 %25 to i32
  %27 = call i64 @unlikely(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %19
  %30 = load i64, i64* %4, align 8
  %31 = load i64, i64* %3, align 8
  %32 = sub nsw i64 %30, %31
  %33 = load i64, i64* %5, align 8
  %34 = sub nsw i64 %33, %32
  store i64 %34, i64* %5, align 8
  %35 = call i32 (...) @smp_processor_id()
  store i32 %35, i32* %6, align 4
  %36 = call i64 @mfctl(i32 16)
  store i64 %36, i64* %3, align 8
  br label %37

37:                                               ; preds = %29, %19
  br label %11

38:                                               ; preds = %18
  %39 = call i32 (...) @preempt_enable()
  ret void
}

declare dso_local i32 @preempt_disable(...) #1

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i64 @mfctl(i32) #1

declare dso_local i32 @preempt_enable(...) #1

declare dso_local i32 @barrier(...) #1

declare dso_local i64 @unlikely(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 619}
